Fixed recruit page vertical alignment so default table size fits on page without scrolling

--- a/src/pages/Recruits.module.css
+++ b/src/pages/Recruits.module.css
@@ -1,8 +1,6 @@
-/* Recruits.module.css (drop-in) */
-
 .page {
   min-height: 100%;
-  padding: 28px 18px 48px;
+  padding: 0px 18px 0px;
 }
 
 .container {
